# Data-Analysis-with-Polars

./: .gitignore  Makefile  README.md  pyproject.toml
ch_01/: check_environment.py  checking_your_setup.ipynb  introduction_to_data_analysis.ipynb  python_101.ipynb
solutions/ch_01/: solutions.ipynb
visual-aids/: setup.py
visual-aids/visual_aids/: ml_viz.py  stats_viz.py
