[project]
name = "data-analysis-with-polars"
version = "0.1.0"
description = ""
readme = "README.md"
# down-pinning since altair is not yet stable on Python 3.13 
# see: https://github.com/vega/altair/issues/3620
requires-python = ">=3.10, <3.13"
dependencies = [
    "cartopy>=0.24.1",
    "graphviz>=0.20.3",
    "imbalanced-learn>=0.12.4",
    "ipykernel>=6.29.5",
    "ipympl>=0.9.4",
    "jupyterlab>=4.3.0",
    "login-attempt-simulator",
    "matplotlib>=3.9.2",
    "ml-utils",
    "notebook>=7.0.7",
    "numpy>=2.1.3",
    "polars>=1.13.1",
    "requests>=2.32.3",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.36",
    "statsmodels>=0.14.4",
    "stock-analysis",
    "toml>=0.10.2",
    "visual-aids",
]

[tool.uv.sources]
visual-aids = { path = "visual-aids" }
ml-utils = { git = "https://github.com/stefmolin/ml-utils.git", rev = "2nd_edition" }
stock-analysis = { git = "https://github.com/stefmolin/stock-analysis.git", rev = "2nd_edition" }
login-attempt-simulator = { git = "https://github.com/stefmolin/login-attempt-simulator.git", rev = "2nd_edition" }

[dependency-groups]
lint = [
    "ruff>=0.7.3",
]
dev = [
    "ptpython>=3.0.29",
]
